--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-query-builder": "ssh://git@github.com:adhyapranata/react-native-query-builder#develop",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
