Add get, union, join, insert, delete application

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "expo-asset": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-sqlite": "~8.0.0",
+    "git": "^0.1.5",
+    "ramda": "^0.26.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-query-builder": "ssh://git@github.com:adhyapranata/react-native-query-builder#develop",
+    "react-native-query-builder": "git+ssh://git@github.com:adhyapranata/react-native-query-builder.git#develop",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
