--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "crane": "git+ssh://git@github.com:adhyapranata/crane.git#0.1.0",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-file-system": "~8.0.0",
@@ -17,7 +18,6 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-query-builder": "git+ssh://git@github.com:adhyapranata/react-native-query-builder.git#develop",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
